Ensured text does not overflow

--- a/src/components/settings/index.module.scss
+++ b/src/components/settings/index.module.scss
@@ -30,7 +30,7 @@
 .button {
     text-align: center;
     height: 50px;
-    width: 100px;
+    width: 120px;
     font-family: impact;
     font-size: 20px;
     color: white;
